--- a/app/views/home/welcome.html.erb
+++ b/app/views/home/welcome.html.erb
@@ -1,6 +1,6 @@
 <section class="container home_body">
   <div class="row logo">
-      <%= image_tag("saveit.png") %>
+      <%= image_tag("fiscalfocus-logo.png") %>
   </div>
   <div class="account  ">
     <%= link_to 'LOG IN', new_user_session_path, class: 'btn btn-primary btn-lg btn-block acc_bttn' %>
