--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,9 +1,9 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-<section class="header">
-<%= link_to unauthenticated_root_path do %><i class="bi bi-arrow-left-circle-fill back_btn"></i> <% end %>
-<div>SignUp</div>
- <%= f.submit "Next" %>
-</section>
+<nav class="navbar navbar-light bg-light justify-content-between nav_bar">
+  <%= link_to unauthenticated_root_path do %><i class="bi bi-arrow-left-circle-fill back_btn"></i> <% end %>
+  <span class="navbar-brand d-flex justify-content-center white_text">REGISTER</span>  
+   <%= f.submit "Sign Up" , class:'btn btn-success my-2 my-sm-0 white_text action_btn ' %>
+</nav>
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field">
