Add fix to linter errors

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>FiscalFocus</title>
-     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>FaciaFocus Budget App</title>
+        <meta name="viewport" content="width=device-width,initial-scale=1">
         <%= csrf_meta_tags %>
         <%= csp_meta_tag %>
         <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
@@ -14,17 +14,19 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
         <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  
   </head>
 
   <body class=layout_body>
-    <% if current_user %>
-       <nav class="navbar navbar-light bg-light justify-content-between nav_bar">
+     <% if current_user %>
+      <nav class="navbar navbar-light bg-light justify-content-between nav_bar">
           <%= link_to authenticated_root_path do %><i class="fa fa-bars back_btn"></i> <% end %>
-          <span class="navbar-brand d-flex justify-content-center white_text">SAVEIT</span>  
+           <%= link_to authenticated_root_path do %> <span class="navbar-brand d-flex justify-content-center white_text">FiscalFocus</span>   <% end %>
          <%= button_to 'SignOut'.html_safe, destroy_user_session_path, method: :delete,  class: "btn btn-sm  btn-danger white_text action_btn" %>
       </nav>
      <%end%>
     
     <%= yield %>
+   
   </body>
 </html>
