--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,7 +1,7 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css");
 
 .layout_body {
-  background-color: #F1F3F2;
+  background-color: #f1f3f2;
 }
 
 .home_body {
